--- a/package.json
+++ b/package.json
@@ -12,12 +12,22 @@
   "dependencies": {
     "@mapbox/polyline": "^1.2.1",
     "@react-google-maps/api": "^2.19.3",
+    "@supabase/supabase-js": "^2.45.4",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "framer-motion": "^11.5.4",
+    "intersection-observer": "^0.12.2",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-intl": "^6.6.8",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.41",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
